--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -126,13 +126,13 @@ endif ( WIN32 )
 ### set this dir as lama source dir ###
 lama_set_source_dir ()
 
-if    ( MPI_FOUND AND LAMA_USE_MPI )
+if    ( MPI_FOUND AND USE_MPI )
 	include_directories ( ${MPI_INCLUDE_PATH} ) 
-endif ( MPI_FOUND AND LAMA_USE_MPI )
+endif ( MPI_FOUND AND USE_MPI )
 
-if    ( CUDA_FOUND AND LAMA_USE_CUDA )
+if    ( CUDA_FOUND AND USE_CUDA )
 	include_directories ( ${CUDA_INCLUDE_DIRS} )
-endif ( CUDA_FOUND AND LAMA_USE_CUDA )
+endif ( CUDA_FOUND AND USE_CUDA )
 
 if ( METIS_FOUND )
     include_directories ( ${METIS_INCLUDE_DIR} ) 
@@ -180,13 +180,13 @@ lama_headers ( ${HEADERS} )
 
 ### add subdirectories ###
 
-if ( CUDA_FOUND AND LAMA_USE_CUDA AND CUDA_HAVE_GPU )
+if ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
     add_subdirectory ( cuda )
-endif ( CUDA_FOUND AND LAMA_USE_CUDA AND CUDA_HAVE_GPU )
+endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
 
-if ( LAMA_USE_MIC )
+if ( USE_MIC )
     add_subdirectory ( mic )
-endif ( LAMA_USE_MIC )
+endif ( USE_MIC )
 
 add_subdirectory ( distribution )
 add_subdirectory ( exception )
@@ -195,23 +195,23 @@ add_subdirectory ( io )
 add_subdirectory ( macros )
 add_subdirectory ( matrix )
 add_subdirectory ( matutils )
-if ( MPI_FOUND AND LAMA_USE_MPI )
+if ( MPI_FOUND AND USE_MPI )
     add_subdirectory ( mpi )
-endif ( MPI_FOUND AND LAMA_USE_MPI )
-#if ( ( ( OSHMEM_FOUND AND GASNET_FOUND) OR GPI_FOUND ) AND LAMA_USE_PGAS )
+endif ( MPI_FOUND AND USE_MPI )
+#if ( ( ( OSHMEM_FOUND AND GASNET_FOUND) OR GPI_FOUND ) AND USE_PGAS )
 #    add_subdirectory( pgas )
-#endif ( ( ( OSHMEM_FOUND AND GASNET_FOUND) OR GPI_FOUND ) AND LAMA_USE_PGAS )
-if ( GPI2_FOUND AND IBVERBS_FOUND AND LAMA_USE_GPI2 )
+#endif ( ( ( OSHMEM_FOUND AND GASNET_FOUND) OR GPI_FOUND ) AND USE_PGAS )
+if ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
     add_subdirectory( gpi )
-endif ( GPI2_FOUND AND IBVERBS_FOUND AND LAMA_USE_GPI2 )
+endif ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
 add_subdirectory ( norm )
 add_subdirectory ( openmp )
 add_subdirectory ( solver )
 add_subdirectory ( storage )
 
-if ( FOUND_BOOST_TEST AND LAMA_BUILD_TEST )
+if ( FOUND_BOOST_TEST AND BUILD_TEST )
     add_subdirectory ( test )
-endif ( FOUND_BOOST_TEST AND LAMA_BUILD_TEST )
+endif ( FOUND_BOOST_TEST AND BUILD_TEST )
 
 ### set link directories ###
 if ( WIN32 )
@@ -222,10 +222,10 @@ link_directories ( ${LAMAPP_LINK_DIRECTORIES} )
 
 ### add library ###
 
-if    ( CUDA_FOUND AND LAMA_USE_CUDA AND CUDA_HAVE_GPU )
+if    ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
 	cuda_compile ( CUDA_FILES ${CUDA_SOURCES} )
 	set ( CXX_SOURCES ${CXX_SOURCES} ${CUDA_FILES} )
-endif ( CUDA_FOUND AND LAMA_USE_CUDA AND CUDA_HAVE_GPU )
+endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
 
 add_library ( ama ${LAMA_LIBRARY_TYPE} ${CXX_SOURCES} ) #${HEADERS} )
 
@@ -236,23 +236,23 @@ endforeach ( module ${SCAI_LAMA_INTERNAL_DEPS} )
 
 target_link_libraries ( ama ${LAMA_BLAS_LIBRARIES} )
 
-if    ( CUDA_FOUND AND LAMA_USE_CUDA AND CUDA_HAVE_GPU )
+if    ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
 	 target_link_libraries ( ama ${CUDA_cusparse_LIBRARY} ${CUDA_cublas_LIBRARY}
 	 							 ${CUDA_CUDART_LIBRARY} ${CUDA_CUDA_LIBRARY} )          
-endif ( CUDA_FOUND AND LAMA_USE_CUDA AND CUDA_HAVE_GPU )
+endif ( CUDA_FOUND AND USE_CUDA AND CUDA_HAVE_GPU )
 
-if    ( MPI_FOUND AND LAMA_USE_MPI )
+if    ( MPI_FOUND AND USE_MPI )
     target_link_libraries ( ama ${MPI_LIBRARIES} )
-endif ( MPI_FOUND AND LAMA_USE_MPI )
+endif ( MPI_FOUND AND USE_MPI )
 
-if    ( GPI2_FOUND AND IBVERBS_FOUND AND LAMA_USE_GPI2 )
+if    ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
     target_link_libraries ( ama ${GPI2_LIBRARIES} ${IBVERBS_LIBRARIES} )
-endif ( GPI2_FOUND AND IBVERBS_FOUND AND LAMA_USE_GPI2 )
+endif ( GPI2_FOUND AND IBVERBS_FOUND AND USE_GPI2 )
 
-if ( SCALAPACK_FOUND AND MPI_FOUND AND LAMA_USE_MPI )
+if ( SCALAPACK_FOUND AND MPI_FOUND AND USE_MPI )
     target_link_libraries ( ama ${LAMA_PBLAS_LIBRARIES} )
     add_definitions( -DLAMA_MKL_SCALAPACK )
-endif ( SCALAPACK_FOUND AND MPI_FOUND AND LAMA_USE_MPI )
+endif ( SCALAPACK_FOUND AND MPI_FOUND AND USE_MPI )
 
 if ( METIS_FOUND )
     target_link_libraries( ama ${METIS_LIBRARY} )
