--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -116,7 +116,7 @@ endif ( Boost_INCLUDE_DIR )
 ### add definitions ###
 
 # GenLogger uses also logging
-add_definitions ( -DSCAI_LOG_LEVEL_DEBUG )
+add_definitions ( -D${SCAI_LOGGING_FLAG} )
 
 if ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
