removed more LAMA_

--- a/CMake/Tests/PAPI/CMakeLists.txt
+++ b/CMake/Tests/PAPI/CMakeLists.txt
@@ -38,7 +38,7 @@ project( PapiExample )
 # make sure that the default is a RELEASE
 
 if ( NOT CMAKE_BUILD_TYPE )
-   set( CMAKE_BUILD_TYPE RELEASE CACHE STRING
+   set( CMAKE_BUILD_TYPE Release CACHE STRING
         "Choose the type of build, options are: None Debug Release."
         FORCE )
 endif ( NOT CMAKE_BUILD_TYPE )
