--- a/scai/lama/lama.hpp.in
+++ b/scai/lama/lama.hpp.in
@@ -47,7 +47,7 @@
 #define SCAI_LOG_LEVEL_${SCAI_LOG_LEVEL}
 #define ${SCAI_TRACING_FLAG}
 
-#define LAMA_OMP_SCHEDULE ${LAMA_OMP_SCHEDULE}
+#define SCAI_OMP_SCHEDULE ${SCAI_OMP_SCHEDULE}
 
 #define SCAI_CUDA_COMPUTE_CAPABILITY ${CUDA_COMPUTE_CAPABILITY}
 
