--- a/scai/tracing/CMakeLists.txt
+++ b/scai/tracing/CMakeLists.txt
@@ -1,5 +1,5 @@
 ###
- # @file CMakeLists.txt
+ # @file scai/tracing/CMakeLists.txt
  #
  # @license
  # Copyright (c) 2009-2015
@@ -25,7 +25,7 @@
  # SOFTWARE.
  # @endlicense
  #
- # @brief tracing/CMakeLists.txt
+ # @brief scai/tracing/CMakeLists.txt
  # @author Thomas Brandes
  # @date 10.06.2015
 ###
@@ -41,17 +41,11 @@ set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
 ## Define all search packages
 include ( InternalDependencies )
-include ( SearchPackages/Tracing ) 
 
 # Find required packages
-foreach    ( PACKAGE_TO_FIND ${REQUIRED_PACKAGES_TO_FIND} )
-    find_package ( ${PACKAGE_TO_FIND} ${LAMA_FIND_PACKAGE_FLAGS} REQUIRED )
-endforeach ( PACKAGE_TO_FIND ${REQUIRED_PACKAGES_TO_FIND} )
-
-# Find optional packages
-foreach    ( PACKAGE_TO_FIND ${OPTIONAL_PACKAGES_TO_FIND} )
-    find_package ( ${PACKAGE_TO_FIND} ${LAMA_FIND_PACKAGE_FLAGS} )
-endforeach ( PACKAGE_TO_FIND ${OPTIONAL_PACKAGES_TO_FIND} )
+foreach    ( PACKAGE_TO_FIND ${SCAI_TRACING_INTERNAL_DEPS} )
+    find_package ( ${PACKAGE_TO_FIND} ${SCAI_FIND_PACKAGE_FLAGS} REQUIRED )
+endforeach ( PACKAGE_TO_FIND ${SCAI_TRACING_INTERNAL_DEPS} )
 
 include ( Functions/checkValue )
 include ( Functions/setAndCheckCache )
@@ -61,7 +55,6 @@ include ( Package/CUDA )
 if    ( NOT SCAI_COMPLETE_BUILD )
 
 	### Include Compiler Flags
-	include ( SetBuildFlags )
 	include ( SetCPPFlags )
 	
 else  ( NOT SCAI_COMPLETE_BUILD )
@@ -74,6 +67,11 @@ else  ( NOT SCAI_COMPLETE_BUILD )
 	set ( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
 
 endif ( NOT SCAI_COMPLETE_BUILD )
+
+if ( NOT CXX_SUPPORTS_C11 )
+    find_package( Boost REQUIRED )
+    include_directories( ${Boost_INCLUDE_DIR} )
+endif ( NOT CXX_SUPPORTS_C11 )
 
 ## Project System-Include
 include_directories ( ../.. )
