--- a/CMake/Tests/LAPACK/CMakeLists.txt
+++ b/CMake/Tests/LAPACK/CMakeLists.txt
@@ -40,7 +40,7 @@ project( GramSchmidt )
 # make sure that the default is a RELEASE
 
 if (NOT CMAKE_BUILD_TYPE)
-   set(CMAKE_BUILD_TYPE RELEASE CACHE STRING
+   set(CMAKE_BUILD_TYPE Release CACHE STRING
       "Choose the type of build, options are: None Debug Release."
       FORCE)
 endif (NOT CMAKE_BUILD_TYPE)
