--- a/scai/hmemo/CMakeLists.txt
+++ b/scai/hmemo/CMakeLists.txt
@@ -25,7 +25,7 @@
  # SOFTWARE.
  # @endlicense
  #
- # @brief hmemo/CMakeLists.txt
+ # @brief scai/hmemo/CMakeLists.txt
  # @author Thomas Brandes
  # @date 30.06.2015
 ###
@@ -41,17 +41,11 @@ set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
 ## Define all search packages
 include ( InternalDependencies )
-include ( SearchPackages/Memory ) 
 
 # Find required packages
-foreach    ( PACKAGE_TO_FIND ${REQUIRED_PACKAGES_TO_FIND} )
-    find_package ( ${PACKAGE_TO_FIND} ${LAMA_FIND_PACKAGE_FLAGS} REQUIRED )
+foreach    ( PACKAGE_TO_FIND ${SCAI_HMEMO_INTERNAL_DEPS} )
+    find_package ( ${PACKAGE_TO_FIND} ${SCAI_FIND_PACKAGE_FLAGS} REQUIRED )
 endforeach ( PACKAGE_TO_FIND ${REQUIRED_PACKAGES_TO_FIND} )
-
-# Find optional packages
-foreach    ( PACKAGE_TO_FIND ${OPTIONAL_PACKAGES_TO_FIND} )
-    find_package ( ${PACKAGE_TO_FIND} ${LAMA_FIND_PACKAGE_FLAGS} )
-endforeach ( PACKAGE_TO_FIND ${OPTIONAL_PACKAGES_TO_FIND} )
 
 include ( Functions/checkValue )
 include ( Functions/setAndCheckCache )
@@ -61,7 +55,6 @@ include ( Package/CUDA )
 if    ( NOT SCAI_COMPLETE_BUILD )
 
 	### Include Compiler Flags
-	include ( SetBuildFlags )
 	include ( SetCPPFlags )
 	include ( SetNVCCFlags )
 	
@@ -75,7 +68,11 @@ else  ( NOT SCAI_COMPLETE_BUILD )
 	set ( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
 
 endif ( NOT SCAI_COMPLETE_BUILD )
-	
+
+if ( NOT CXX_SUPPORTS_C11 )
+    find_package( Boost REQUIRED )
+    include_directories( ${Boost_INCLUDE_DIR} )
+endif ( NOT CXX_SUPPORTS_C11 )
 
 ## Project System-Include
 include_directories ( ../.. )
