--- a/scai/lama/test/cuda/CMakeLists.txt
+++ b/scai/lama/test/cuda/CMakeLists.txt
@@ -73,10 +73,10 @@ add_executable ( lama_cuda_test lama_cuda_test.cpp ${CXX_SOURCES} )
 if ( WIN32 )
     target_link_libraries ( lama_cuda_test ama )
 else ( WIN32 )
-    if ( LAMA_LIBRARY_TYPE STREQUAL "STATIC" )
+    if ( SCAI_LIBRARY_TYPE STREQUAL "STATIC" )
         target_link_libraries ( lama_cuda_test "-Wl,--whole-archive" ama amacuda "-Wl,--no-whole-archive" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${LAMA_THREAD_LIBRARY} )
         #SET_TARGET_PROPERTIES ( lama_test PROPERTIES LINK_FLAGS "-Wl,--whole-archive -l../lama/libama.a -Wl,--no-whole-archive")
     else ()
         target_link_libraries ( lama_cuda_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${LAMA_THREAD_LIBRARY} )
-    endif ( LAMA_LIBRARY_TYPE STREQUAL "STATIC" )
+    endif ( SCAI_LIBRARY_TYPE STREQUAL "STATIC" )
 endif ( WIN32 )
