add UnsupportedException; rename LAMA_UNSUPPORTED to SCAI_UNSUPPORTED; move Settings to common

--- a/scai/lama/solver/CMakeLists.txt
+++ b/scai/lama/solver/CMakeLists.txt
@@ -61,7 +61,7 @@ set ( CLASSES
         MINRES
         OmegaSolver
 	Richardson
-        SimpleAMG
+ #       SimpleAMG
         SingleGridSetup
         SolutionProxy
         Solver
