--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -102,7 +102,7 @@ set ( SOURCE_FILES
         ResidualThresholdTest
         RichardsonTest
         ScalarTest
-        SimpleAMGTest
+    #    SimpleAMGTest
         SolutionProxyTest
         SORTest
         SparseAssemblyStorageTest
