Now hmemo cuda test and examples will be built, applied latest transformations.

--- a/scai/hmemo/examples/cuda/CMakeLists.txt
+++ b/scai/hmemo/examples/cuda/CMakeLists.txt
@@ -37,11 +37,11 @@
 
 foreach ( executable CUSparseExample MemBandwidth )
     add_executable( ${executable} ${executable}.cpp )
-    target_link_libraries( ${executable} memory )
+    target_link_libraries( ${executable} scai_hmemo )
 endforeach ( executable )
 
 foreach ( executable Example1 Example2 Devices BenchContext )
     cuda_add_executable( ${executable} ${executable}.cu )
-    target_link_libraries( ${executable} memory )
+    target_link_libraries( ${executable} scai_hmemo )
 endforeach ( executable )
 
