--- a/scai/hmemo/examples/CMakeLists.txt
+++ b/scai/hmemo/examples/CMakeLists.txt
@@ -36,3 +36,8 @@ foreach ( executable Array1 BenchArray Aliasing Threading Create )
     add_executable( ${executable} ${executable}.cpp )
     target_link_libraries( ${executable} scai_hmemo )
 endforeach ( executable )
+
+if ( CUDA_FOUND AND USE_CUDA )
+    add_subdirectory ( cuda )
+endif ()
+
