remove empty LAMA_THREAD_LIBRARY variable in target_link_libraries

--- a/scai/lama/test/cuda/CMakeLists.txt
+++ b/scai/lama/test/cuda/CMakeLists.txt
@@ -74,9 +74,9 @@ if ( WIN32 )
     target_link_libraries ( lama_cuda_test ama )
 else ( WIN32 )
     if ( SCAI_LIBRARY_TYPE STREQUAL "STATIC" )
-        target_link_libraries ( lama_cuda_test "-Wl,--whole-archive" ama amacuda "-Wl,--no-whole-archive" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${LAMA_THREAD_LIBRARY} )
+        target_link_libraries ( lama_cuda_test "-Wl,--whole-archive" ama amacuda "-Wl,--no-whole-archive" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
         #SET_TARGET_PROPERTIES ( lama_test PROPERTIES LINK_FLAGS "-Wl,--whole-archive -l../lama/libama.a -Wl,--no-whole-archive")
     else ()
-        target_link_libraries ( lama_cuda_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${LAMA_THREAD_LIBRARY} )
+        target_link_libraries ( lama_cuda_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
     endif ( SCAI_LIBRARY_TYPE STREQUAL "STATIC" )
 endif ( WIN32 )
