--- a/scai/lama/test/distributed/CMakeLists.txt
+++ b/scai/lama/test/distributed/CMakeLists.txt
@@ -105,8 +105,8 @@ if ( WIN32 )
     target_link_libraries ( lama_dist_test ama )
 else ( WIN32 )
     if ( SCAI_LIBRARY_TYPE STREQUAL "STATIC" )
-        target_link_libraries ( lama_dist_test "-Wl,--whole-archive" ama amampi "-Wl,--no-whole-archive" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${LAMA_THREAD_LIBRARY} )
+        target_link_libraries ( lama_dist_test "-Wl,--whole-archive" ama amampi "-Wl,--no-whole-archive" ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
     else ()
-        target_link_libraries ( lama_dist_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} ${LAMA_THREAD_LIBRARY} )
+        target_link_libraries ( lama_dist_test ama ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
     endif ( SCAI_LIBRARY_TYPE STREQUAL "STATIC" ) 
 endif ( WIN32 )
