--- a/scai/hmemo/CMakeLists.txt
+++ b/scai/hmemo/CMakeLists.txt
@@ -39,26 +39,13 @@ project( scai_hmemo CXX )
 ### Set Module Path
 set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
-## Define all search packages
-include ( InternalDependencies )
-include ( ExternalDependencies )
-
-# Find required packages
-
-foreach    ( module ${SCAI_HMEMO_EXTERNAL_DEPS} )
-    include( Package/${module} )
-endforeach ( module ${SCAI_HMEMO_EXTERNAL_DEPS} )
-
-foreach    ( PACKAGE_TO_FIND ${SCAI_HMEMO_INTERNAL_DEPS} )
-    find_package ( ${PACKAGE_TO_FIND} ${SCAI_FIND_PACKAGE_FLAGS} REQUIRED )
-endforeach ( PACKAGE_TO_FIND ${REQUIRED_PACKAGES_TO_FIND} )
-
 include ( Functions/checkValue )
 include ( Functions/setAndCheckCache )
 
 if    ( NOT SCAI_COMPLETE_BUILD )
 
 	### Include Compiler Flags
+	include ( SetBuildFlags )
 	include ( SetCPPFlags )
 	
 else  ( NOT SCAI_COMPLETE_BUILD )
@@ -76,6 +63,20 @@ if ( NOT CXX_SUPPORTS_C11 )
     find_package( Boost REQUIRED )
     include_directories( ${Boost_INCLUDE_DIR} )
 endif ( NOT CXX_SUPPORTS_C11 )
+
+## Define all search packages
+include ( InternalDependencies )
+include ( ExternalDependencies )
+
+# Find required packages
+
+foreach    ( module ${SCAI_HMEMO_EXTERNAL_DEPS} )
+    include( Package/${module} )
+endforeach ( module ${SCAI_HMEMO_EXTERNAL_DEPS} )
+
+foreach    ( PACKAGE_TO_FIND ${SCAI_HMEMO_INTERNAL_DEPS} )
+    find_package ( ${PACKAGE_TO_FIND} ${SCAI_FIND_PACKAGE_FLAGS} REQUIRED )
+endforeach ( PACKAGE_TO_FIND ${REQUIRED_PACKAGES_TO_FIND} )
 
 ## Project System-Include
 include_directories ( ../.. )
