--- a/scai/logging/examples/CMakeLists.txt
+++ b/scai/logging/examples/CMakeLists.txt
@@ -61,17 +61,14 @@ endif ()
 
 # OpenMPTest example
 
-find_package ( OpenMP )
+include ( Package/OpenMP )
 
-if ( OPENMP_FOUND )
+if    ( OPENMP_FOUND )
+	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     # Adding this example only possible if OpenMP is available
     add_executable( LogOpenMP LogOpenMP.cpp )
-    #target_link_libraries( LogOpenMP ${logging_LIBRARY} )
     target_link_libraries( LogOpenMP scai_logging )
-    # Note: OpenMP_CXX_FLAGS are already set globally
-    # set_target_properties( LogOpenMP PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS} )
-    # set_target_properties( LogOpenMP PROPERTIES LINK_FLAGS ${OpenMP_CXX_FLAGS} )
-else ()
+else  ( OPENMP_FOUND )
     message ( STATUS "LogOpenMP example not built, no compiler option found" )
-endif()
+endif ( OPENMP_FOUND )
 
